prevent white spacing from collapsing in text bubbles

--- a/client/src/Components/CSS/TextBubble.css
+++ b/client/src/Components/CSS/TextBubble.css
@@ -16,3 +16,7 @@
 .chatBlock > .other {
   background-color: var(--light-gray);
 }
+
+.textBubble__message {
+  white-space: pre-wrap;
+}
